--- a/UIEcomerce/src/index.html
+++ b/UIEcomerce/src/index.html
@@ -18,6 +18,7 @@
   <script>
     function toggleMobileMenu() {
       document.getElementById('mobile-menu').classList.toggle('hidden');
+      document.getElementById('mobile-menu-perfil').classList.toggle('hidden');
     }
 
     function toggleSearch() {
