--- a/UIEcomerce/src/index.html
+++ b/UIEcomerce/src/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <app-root></app-root>
-
+<script src="./assets/js/assignmenu.js" ></script>
   <script>
     function toggleMobileMenu() {
       document.getElementById('mobile-menu').classList.toggle('hidden');
