Role and authorization

--- a/UIEcomerce/src/index.html
+++ b/UIEcomerce/src/index.html
@@ -15,6 +15,7 @@
 <body>
   <app-root></app-root>
 <script src="./assets/js/assignmenu.js" ></script>
+<script src="./assets/js/assignmenu.js" ></script>
   <script>
     function toggleMobileMenu() {
       document.getElementById('mobile-menu').classList.toggle('hidden');
